--- a/index.html
+++ b/index.html
@@ -157,13 +157,13 @@
             <td><b>2.5 sec</b></td>
         </tr>
         <tr>
-            <td>Average Time Gain Per Request</td>
+            <td><b>Average Time Saved Per Request</b></td>
             <td><b>2.8 sec</b></td>
         </tr>
     </table>
     <br/>
     <div id='total-title'>
-        Hours of frustration saved in Q1 2018
+        Years of frustration saved in Q1 2018
     </div>
     <br/>
     <table id='total-value'>
